--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button type="submit" id="toDoBtn" class="btn btn-primary ms-3">Add</button>
           </form>
           <div class="list-items mt-3">
-            <ol class="list-group list-group-numbered"></ol>
+            <ol class="list-group"></ol>
           </div>
         </div>
       </div>
